# Touch-Rev

./: .clangd  .gitignore  .gitmodules  .mcp.json  CMakeLists.txt  CMakePresets.json  app.manifest
blocker/: CMakeLists.txt
blocker/common/: blocker_status.cpp  blocker_status.h  constants.h  log.cpp  log.h  winutil.h
blocker/hookdll/: dbghelp_symbol_provider.cpp  dbghelp_symbol_provider.h  direct_hook_resolver.cpp  direct_hook_resolver.h  dllmain.cpp  gesture_blocker.h  hooks.h  twinui_gesture_hooks.cpp  twinui_gesture_table_patch.cpp  twinui_gesture_table_patch.h
blocker/injector/: inject.cpp  main.cpp  process_find.cpp
core/: CMakeLists.txt
core/common/: AppSettings.h  PathUtils.h  StringUtils.h  Win32Error.h  XamlIslandCommon.h
core/input/: InputController.h
core/input/gesture/: GestureContact.cpp  GestureContact.h  GestureContext.cpp  GestureRecognizers.cpp  ThreeFingerGestureRecognizer.h
core/input/raw/: RawTouchInput.cpp  RawTouchInput.h
docs/: appswitcher_visual_analysis.md  blocker_hook_analysis.md  how_to_block_all_three_finger_gestures.md  how_to_block_finger_gestures.md
docs/artifacts/: alttab_acrylic_findings.md  appswitcher_focus_acrylic_plan.md  appswitcher_item_state_implementation_plan.md  appswitcher_xaml_recreation_analysis.md  appwindow_appswitcher_bloat_analysis.md  current_pdb_gesture_table_hook.md  gesture_system_comparison.md  gesture_system_lag_root_cause_analysis.md  private_api_compatibility_assessment.md  private_thumbnail_probe_interface_spec.md  private_thumbnail_versioning_strategy.md
gui/: CMakeLists.txt  main.cpp
gui/ui/: CardView.cpp  CardView.h  ConfigWindow.cpp  ConfigWindow.h  LayoutEngine.h  MainWindow.cpp  MainWindow.h  ThemeManager.cpp  ThemeManager.h
gui/ui/config/: ConfigWindow.cpp  ConfigWindow.h
gui/ui/shared/: ThemeManager.cpp  ThemeManager.h
gui/ui/switcher/: CardView.cpp  CardView.h  MainView.cpp  MainView.h  MainWindow.cpp  MainWindow.h
gui/xaml/: AppSwitcherRoot.xaml  ConfigRoot.xaml  SwitcherItem.xaml  ThemeResources.xaml
poc/private_thumbnail_probe/: CMakeLists.txt  README.md  app.manifest
poc/private_thumbnail_probe/src/: main.cpp
src/: AnimationSystem.cpp  AppWindow.cpp  AppWindow.h  BackdropController.cpp  BackdropController.h  CompositionHost.cpp  CompositionHost.h  CoordinateSpace.h  GraphicsDevice.cpp  InputController.cpp  InputController.h  Renderer.cpp  Renderer.h  Win32Error.cpp  main.cpp
src/appswitcher/: AppSwitcherItemView.cpp  AppSwitcherItemView.h  AppSwitcherLayoutEngine.cpp  AppSwitcherLayoutEngine.h  AppSwitcherWindowing.cpp  AppSwitcherWindowing.h  AppSwitcherXamlView.cpp  AppSwitcherXamlView.h  CardView.cpp  CardView.h  LayoutEngine.cpp  LayoutEngine.h  MainView.cpp  MainView.h  WindowController.cpp  WindowController.h
src/appswitcher/xaml/: AppSwitcherRoot.xaml  SwitcherItem.xaml  ThemeResources.xaml
src/blocker/: CMakeLists.txt
src/blocker/common/: constants.h  log.cpp  winutil.cpp
src/blocker/hookdll/: dbghelp_symbol_provider.h  gesture_blocker.cpp  gesture_blocker.h  hooks.cpp  twinui_gesture_hooks.cpp  twinui_gesture_hooks.h
src/blocker/injector/: inject.h  main.cpp  process_find.h
src/common/: CoordinateSpace.h  DwmUtils.h  FileUtils.h  GeometryUtils.h  IconUtils.cpp  IconUtils.h
src/graphics/: CompositionHost.cpp  GraphicsDevice.cpp  GraphicsDevice.h  Renderer.cpp  Renderer.h
src/input/: InputController.cpp  InputController.h
src/input/gesture/: GestureContext.h  GestureRecognizers.h  GestureSession.cpp  GestureSession.h  GestureTypes.h  ThreeFingerGestureRecognizer.cpp  ThreeFingerGestureRecognizer.h
src/model/: RectangleModel.h
src/thumbnail/: PrivateThumbnailInterfaces.h  PrivateThumbnailManager.cpp  PrivateThumbnailManager.h
src/tools/: RawTouchInputViewer.cpp
src/ui/: AnimationSystem.cpp  AnimationSystem.h  AppSwitcherLayoutEngine.cpp  AppSwitcherLayoutEngine.h  AppSwitcherXamlView.cpp  AppSwitcherXamlView.h  AppTheme.cpp  AppTheme.h  AppWindow.cpp  AppWindow.h  BackdropController.cpp  ConfigWindow.cpp  ConfigWindow.h  MainWindow.cpp  MainWindow.h  ThemeManager.cpp  ThemeManager.h  ThinXamlAppSwitcherHost.cpp  ThinXamlAppSwitcherHost.h
src/ui/xaml/: AppSwitcherRoot.xaml  SwitcherItem.xaml
tools/: CMakeLists.txt
tools/RawTouchInputViewer/: CMakeLists.txt  RawTouchInputViewer.cpp
